objects/SBQQ__Theme__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__DialogMaskColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Color of pop-up modal masks</inlineHelpText>
        <label>Dialog Mask Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font color of additional instructions displayed under feature name</inlineHelpText>
        <label>Feature Instructions Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsFontFamily__c</fullName>
        <inlineHelpText>Font family additional instructions displayed under feature name</inlineHelpText>
        <label>Feature Instructions Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsFontSize__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font size of additional instructions displayed under feature name</inlineHelpText>
        <label>Feature Instructions Font Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsFontStyle__c</fullName>
        <inlineHelpText>Font style of additional instructions displayed under feature name (Click the icon for additional information)</inlineHelpText>
        <label>Feature Instructions Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>italic</fullName>
                </value>
                <value>
                    <fullName>oblique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsFontWeight__c</fullName>
        <inlineHelpText>Font weight of additional instructions displayed under feature name (Click the icon for additional information)</inlineHelpText>
        <label>Feature Instructions Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                    <default>true</default>
                    <label>300</label>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsPaddingBottom__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Bottom padding of additional instructions displayed under feature name</inlineHelpText>
        <label>Feature Instructions Bottom Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsPaddingLeft__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Left padding of additional instructions displayed under feature name</inlineHelpText>
        <label>Feature Instructions Left Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsPaddingRight__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Right padding of additional instructions displayed under feature name</inlineHelpText>
        <label>Feature Instructions Right Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsPaddingTop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Top padding of additional instructions displayed under feature name</inlineHelpText>
        <label>Feature Instructions Top Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FeatureInstructionsTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text in additional instructions displayed under feature name (Click the icon for additional information)</inlineHelpText>
        <label>Feature Instructions Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FieldEditableIconColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Color of icon displayed next to a field indicating if its editable or not</inlineHelpText>
        <label>Field Editable Icon Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FieldEditedColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Color of icon displayed next to a field that has been edited / Font color of edited fields</inlineHelpText>
        <label>Edited Field Icon and Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FilterDrawerFontColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font color of filter side panels</inlineHelpText>
        <label>Filter Drawer Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneralBorderColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Border color of non-admin CPQ page</inlineHelpText>
        <label>General Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneralColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Background color of non-admin CPQ pages</inlineHelpText>
        <label>General Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneralFontColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Default font color</inlineHelpText>
        <label>General Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneralFontFamily__c</fullName>
        <inlineHelpText>Default font family</inlineHelpText>
        <label>General Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupBorderColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Border color of quote line groups and features</inlineHelpText>
        <label>Group Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupBorderWidth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Border width of quote line groups and features</inlineHelpText>
        <label>Group Border Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonBorderColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Border color of standard buttons</inlineHelpText>
        <label>Standard Button Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Background color of standard buttons</inlineHelpText>
        <label>Standard Button Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonDisabledFontColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font color of disabled standard buttons</inlineHelpText>
        <label>Standard Button Disabled Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonFontColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font color of standard buttons</inlineHelpText>
        <label>Standard Button Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonHoverColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Hover color of standard buttons</inlineHelpText>
        <label>Standard Button Hover Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonHoverFontColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Hover font color of standard buttons</inlineHelpText>
        <label>Standard Button Hover Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderBackgroundColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Background color of quote line group and feature headers</inlineHelpText>
        <label>Group Header Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderBorderBottomColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Bottom border color of quote line group and feature headers</inlineHelpText>
        <label>Group Header Border Bottom Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderBorderBottomWidth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Bottom border width of quote line group and feature headers</inlineHelpText>
        <label>Group Header Border Bottom Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderFontColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font color of quote line group and feature headers</inlineHelpText>
        <label>Group Header Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderFontFamily__c</fullName>
        <inlineHelpText>Font family of quote line group and feature headers</inlineHelpText>
        <label>Group Header Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderFontSize__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font size of quote line group and feature headers</inlineHelpText>
        <label>Group Header Font Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderFontStyle__c</fullName>
        <inlineHelpText>Font style of quote line group and feature headers (Click the icon for additional information)</inlineHelpText>
        <label>Group Header Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>italic</fullName>
                </value>
                <value>
                    <fullName>oblique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderFontWeight__c</fullName>
        <inlineHelpText>Font weight of quote line group and feature headers (Click the icon for additional information)</inlineHelpText>
        <label>Group Header Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                    <default>true</default>
                    <label>200</label>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupHeaderTextDecoration__c</fullName>
        <inlineHelpText>Decoration added to text in quote line group and feature headers (Click the icon for additional information)</inlineHelpText>
        <label>Group Header Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>underline</fullName>
                </value>
                <value>
                    <fullName>overline</fullName>
                </value>
                <value>
                    <fullName>line-through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderBorderColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Border color of page header</inlineHelpText>
        <label>Header Border Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderBorderStyle__c</fullName>
        <inlineHelpText>Border style of page header (Click the icon for additional information)</inlineHelpText>
        <label>Header Border Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>hidden</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashed</fullName>
                </value>
                <value>
                    <fullName>solid</fullName>
                    <default>true</default>
                    <label>solid</label>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>grove</fullName>
                </value>
                <value>
                    <fullName>ridge</fullName>
                </value>
                <value>
                    <fullName>inset</fullName>
                </value>
                <value>
                    <fullName>outset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderBorderWidth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Border width of page header</inlineHelpText>
        <label>Header Border Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Background color of page header</inlineHelpText>
        <label>Header Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderFontColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font color of page header</inlineHelpText>
        <label>Header Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderFontFamily__c</fullName>
        <inlineHelpText>Font family of page header</inlineHelpText>
        <label>Header Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Sans</fullName>
                    <default>true</default>
                    <label>Salesforce Sans</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Myriad Pro</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Soto Sans TC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderFontSize__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font size of page header</inlineHelpText>
        <label>Header Font Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderFontStyle__c</fullName>
        <inlineHelpText>Font style of page header (Click the icon for additional information)</inlineHelpText>
        <label>Header Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>italic</fullName>
                </value>
                <value>
                    <fullName>oblique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderFontWeight__c</fullName>
        <inlineHelpText>Font weight of page header text (Click the icon for additional information)</inlineHelpText>
        <label>Header Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>bolder</fullName>
                </value>
                <value>
                    <fullName>lighter</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                    <default>true</default>
                    <label>700</label>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderIconColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Color of page header icon</inlineHelpText>
        <label>Header Icon Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderIconFontSize__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font size of page header icon</inlineHelpText>
        <label>Header Icon Font Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderMinHeight__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Minimum height of page header</inlineHelpText>
        <label>Header Minimum Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderPaddingBottom__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Bottom padding of page header</inlineHelpText>
        <label>Header Bottom Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderPaddingLeft__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Left padding of page header</inlineHelpText>
        <label>Header Left Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderPaddingRight__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Right padding of page header</inlineHelpText>
        <label>Header Right Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderPaddingTop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Top padding of page header</inlineHelpText>
        <label>Header Top Padding</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderSecondaryFontColor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Font color of page sub-header</inlineHelpText>
        <label>Header Secondary Font Color</label>
        <length>23</length>
        <type>Text</type>
    </fields>
</CustomObject>